
opam-version: "2.0"
version: "1.0"
authors: "Chris Nevers <christophernevers96@gmail.com>"
maintainer: "Chris Nevers <christophernevers96@gmail.com>"
homepage: "https://github.com/chrisnevers/chungus"
bug-reports: "https://github.com/chrisnevers/chungus/issues"
dev-repo: "git://github.com/chrisnevers/chungus.git"
synopsis: ""
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml"
  "dune" {>= "2.7.1"}
]
